inc/css/main.css
/*
	Author: Kevin McCoy
	Created: 01/19/2013
*/
/*===============================================================*/
/*  Main Page CSS*/
/*===============================================================*/
/* ##### KRM Set ################################################*/
.clearBoth{
	clear: both;
}
ul{
	list-style: none;
}
div.clear{clear:both;}

/* ##### Font Setup #############################################*/
/* Company's Logo */
h1{
	font-family: 'Snippet', sans-serif;
	font-size: 2.1em;
	color: rgba(58, 58, 58, .8);
	margin-top: 14px
}
h1:hover{
	font-family: 'Snippet', sans-serif;
	color: rgba(58, 58, 58, 1);
}
/* Title for Image on landing page */
h2{
	font-family: 'Roboto+Condensed', sans-serif;
	text-align: center;
	color: rgba(58, 58, 58, .95);
	font-size: 1.4em;
	margin: 18px 0px 12px;
}

/* Title to Blog story*/
h3{
	font-family: 'Mouse+Memoirs', sans-serif;
	text-align: left;
	color: rgba(58, 58, 58, .8);
	font-size: 1.5em;
	margin: 0px;
}
h3.m{
	margin-bottom: 14px;
}

/* Blog writer name and/or date */
h4{
	color: rgba(58, 58, 58, .75);
	font-size: .7em;
	margin: 0px 8px 0px 0px;
	font-weight: 100;
	vertical-align: middle;
}

p, a{
	text-decoration: none;
	font-family: Tahoma, Geneva, sans-serif;
	text-align: left;
	font-size: 1em;
	letter-spacing: 1px;
	margin: 12px 0px 8px;
}
p{
	color: rgba(58, 58, 58, 1);
}
a.blog p{
	color: rgba(58, 58, 58, .7);
	font-size: .9em;
	text-align: right;
	margin: 0px 20px;
	text-decoration: underline;
}

/* font - Navigation */
ul#nav li a{
	color: rgba(58, 58, 58, 0.72);
	font-weight: 600;
}
/* Font - HoverOver ========== */
a h3:hover, a.blog p:hover{
	color: rgba(58, 58, 58, 1);
	text-decoration: underline;
}
/* ===========================================[END] Font Style ===+++++++===*/



/*##########################################################################*/
/*##### Buttons ############################################################*/
/*##########################################################################*/
a.landingBTN {
	display: block;
	clear: both;
	margin: 0 auto;
	text-align: center;
	text-decoration: none;
	width: 280px;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 1em;
	color: #060a06;
	padding: 10px 20px;
	background: -moz-linear-gradient(
		top,
		#e4f2f5 0%,
		#b6b9d6);
	background: -webkit-gradient(
		linear, left top, left bottom, 
		from(rgba(182, 185, 214, 0.78)),
		to(#e4f2f5));
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
	border-radius: 10px;
	border: 3px solid rgba(70, 117, 201, 0.7);
	-moz-box-shadow:
		0px 1px 3px rgba(000,000,000,0.5),
		inset 0px 0px 3px rgba(184,198,255,1);
	-webkit-box-shadow:
		0px 1px 3px rgba(000,000,000,0.5),
		inset 0px 0px 3px rgba(184,198,255,1);
	box-shadow:
		0px 1px 3px rgba(000,000,000,0.5),
		inset 0px 0px 3px rgba(184,198,255,1);
	text-shadow:
		0px -1px 0px rgba(000,000,000,0.2),
		0px 1px 0px rgba(255,255,255,1);
}

.landingBTN:hover{
	color: rgb(30, 32, 30);
	padding: 10px 20px;
	background: -moz-linear-gradient(
		top,
		rgb(217, 234, 238) 0%,
		rgb(165, 177, 206));
	background: -webkit-gradient(
		linear, left top, left bottom, 
		from(rgb(165, 177, 206)),
		to(rgb(217, 234, 238)));
	border: 3px solid rgba(70, 117, 201, 0.85);
	border-radius: 10px;
		-moz-border-radius: 10px;
		-webkit-border-radius: 10px;
	box-shadow:
		0px 1px 3px rgba(000,000,000,0.5),
		inset 0px 0px 3px rgba(184,198,255,1);
		-moz-box-shadow:
			0px 1px 3px rgba(000,000,000,0.5),
			inset 0px 0px 3px rgba(184,198,255,1);
		-webkit-box-shadow:
			0px 1px 3px rgba(000,000,000,0.5),
			inset 0px 0px 3px rgba(184,198,255,1);
	text-shadow:
		0px -1px 0px rgba(000,000,000,0.2),
		0px 1px 0px rgba(255,255,255,1);
}
/*==================================================== [END] Buttons ========*/


/*##########################################################################*/
/*##### Layout Start Here - Wrapper - ######################################*/
/*##########################################################################*/
body{
	background: url("../bg/lake.jpg") no-repeat center center fixed;
	  -webkit-background-size: cover;
	  -moz-background-size: cover;
	  -o-background-size: cover;
	background-size: cover;
	
/*		background: url("../bg/black_paper.png") repeat;
		background: url("../bg/dirty_old_shirt.png") repeat; */
}
/* Wrap entire page except for feedback */
.wrapper{
	margin: 14px auto;
	padding: 32px;
	width: 960px;
	box-shadow: 0px 3px 6px #000;
		-moz-box-shadow:0px 3px 6px #000;
		-webkit-box-shadow:0px 3px 6px #000;
	padding-bottom: 65px;
/*	background: url("../bg/random_grey_variations.png")x
	background: url("../bg/pp.jpg");
	background: url("../bg/Natural-Paper-Palette/deepsea.jpg"); */
	background: url("../bg/Natural-Paper-Palette/eggshell.jpg");
 	opacity:.90; 
		-khtml-opacity:.8; 
		-moz-opacity:.8;
		-ms-filter:"alpha(opacity=80)";
  		filter:alpha(opacity=80);
  		filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0.8);
}
div.left{
	float: left;
	width: 785px;
}
div.right{
	float: left;
	width: 170px;
	border: solid red 2px;
	height: 1000px;
}


/* ##### Header ##########################################################*/
/* Top part of page, contains Navigation and Login */
div#header{
	margin-top: 4em;
	position: relative;
}
div#nav_wrapper{
	height: 8em;
	top: 50%;
	width: 100%;
	margin-top: -5em
}
ul#nav{
	float: right;
}
h1.logo{
	float: left;
}
h1.logo a{
	margin: 0px;
	text-align: left;
	text-decoration: none;
}
/* ===========================================[END] Header =========== */


/* ##### Navgation ################################################### */
div.table{
	display: table;
	margin: 0 auto;
}
ul#nav {
	font-size:14px;
	list-style:none;
	margin:0 auto;
	padding:0;
	overflow: auto;
}
ul#nav li {
	display:inline;
}
ul#nav li a {
	text-decoration:none;
	display: block;
	padding:5px 21px;
	float:left;
	text-align:center;
	border-top:8px solid transparent;
	border-bottom:8px solid transparent;
}
ul#nav li a:hover, ul#nav li.current a{
	color: rgba(58, 58, 58, 0.95);
	border-top:8px solid rgba(105, 54, 36, 1);
	border-bottom:8px solid transparent;
}
ul#nav li.current a{
	border-top:8px solid rgba(105, 54, 36, 0.63);
}

/* ##### Horizontal Rules ##### */
hr.style_one{
	clear: both;
	margin: 5px 1px 5px auto;
	border: 0;
	height: 1px;
	width: 800px;
	background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0.2)); 
	background-image:	-moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0.2)); 
	background-image:	 -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0.2)); 
	background-image:	  -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0.15)); 
}
hr.style_two{
	clear: both;
	margin: 0 auto;
	display: block;
	text-align: center;
	border: 0;
	height: 1px;
	width: 600px;
	background-image: -webkit-linear-gradient(left, rgba(0,0,0,0.1), rgba(0,0,0,0.25), rgba(0,0,0,0.1)); 
	background-image:	-moz-linear-gradient(left, rgba(0,0,0,0.1), rgba(0,0,0,0.25), rgba(0,0,0,0.1)); 
	background-image:	 -ms-linear-gradient(left, rgba(0,0,0,0.1), rgba(0,0,0,0.25), rgba(0,0,0,0.1)); 
	background-image:	  -o-linear-gradient(left, rgba(0,0,0,0.1), rgba(0,0,0,0.25), rgba(0,0,0,0.1)); 
}
/* =================================================== [END] Navgation ===============*/


/*##########################################################################*/
/*##### Landing Page CSS ###################################################*/
/*##########################################################################*/
ul#siteInfo{
	float: left;
	margin: 0px auto 80px;
	list-style-type: none;
	padding: 0px;
}
ul#siteInfo li{
	display: block;
	float: left;
	width:220px;
	margin-left: 0px;
	margin-right: 25px;
}
ul#siteInfo li:last-child{
	margin-right: 0px;
}
ul#siteInfo a img{
	display: block;
	margin: 0 auto;
}
ul#siteInfo li p{
	text-shadow: 0 2px 0 rgba(255, 255, 255, .8);
	margin: 12px 10px;
}
ul#siteInfo a{
	text-decoration: none;
}
ul#siteInfo li:hover{
	background-color: rgba(245, 245, 252, 0.5);
	-webkit-transform: scale(1.1,1.1);
	-moz-transform: scale(1.1,1.1);
	-o-transform: scale(1.1,1.1);
	transform: scale(1.1,1.1);
}

/*###################################################################################*/
/*##### Each blog in short detail ###################################################*/
/*###################################################################################*/
ul.blogsShort{
	margin: 0px auto;
	padding: 0px 15px 0px 15px;
}
ul.blogsShort li{
	width: 500px;
	margin: 15px 0 18px;
	width: inherit;
	overflow: hidden;
	clear: both;
	float: left;
}
ul.blogsShort img{
	float: left;
	margin-right: 25px;
}
div.social{
	display: table-cell;
}
h4{
	display: table-cell;
	padding: 0px 30px 0px 0px;
}

div.googleplus, div.facebook{
	display: table-cell;
	vertical-align: top;
}

/*##########################################################################*/
/*##### Full Story CSS #####################################################*/
/*##########################################################################*/
ul#story{
	width: 700px;
}
/*======================= [END] Full Story Page ========*/


/*======================= [END] Main.css ========*/

